Changed database to use hibernate

--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,13 @@
 *.rar
 
 # User-specific stuff
+**/.idea/libraries/
 **/.idea/workspace.xml
 **/.idea/tasks.xml
 **/.idea/checkstyle-idea.xml
 **/.idea/sonarlint
 *.iml
+JavaFxApplication.iml
 
 # File-based project format
 *.iws
