--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
