--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,13 @@
             <artifactId>javafx-controls</artifactId>
             <version>11</version>
         </dependency>
-
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
+            <version>11</version>
+        </dependency><dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
             <version>11</version>
         </dependency>
         <dependency>
