Rewrite Css class to make it more readable, compact and general

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 **/.idea/tasks.xml
 **/.idea/checkstyle-idea.xml
 **/.idea/sonarlint
+**/.idea/codeStyles/
 **/.idea/dataSources.local.xml
 **/.idea/dataSources.xml
 **/.idea/dataSources/
