--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,23 @@
 image: maven:latest
 
+stages:
+  - build
+  - pages
+
 cache:
   paths:
     - /root/.m2/repository/
 
+
+build:
+  stage: build
+  only:
+    - master
+  script:
+    - echo "BUILDING PROJECT"
+    - mvn clean compile
+
 pages:
-  stage: deploy
   script:
     - mvn javadoc:javadoc
   artifacts:
